[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Experiments/KinematicBody2D.gd" type="Script" id=2]
[ext_resource path="res://Experiments/ExampleLevel.gd" type="Script" id=3]

[sub_resource type="Animation" id=4]
resource_name = "New Anim"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.9, 2.2, 2.5 ),
"transitions": PoolRealArray( 1, -2, -2, 2 ),
"update": 0,
"values": [ 50.0, 50.0, 10.0, 200.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "New Anim"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.9, 2.2, 2.5 ),
"transitions": PoolRealArray( 1, -2, -2, 2 ),
"update": 0,
"values": [ 50.0, 50.0, 10.0, 200.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="CircleShape2D" id=1]
radius = 42.0119

[node name="ExampleLevel" type="Node2D"]
script = ExtResource( 3 )

[node name="Green2" type="Polygon2D" parent="."]
visible = false
position = Vector2( 165, 208 )
scale = Vector2( 1.491, 1.415 )
color = Color( 0.0235294, 0.882353, 0.0156863, 1 )
polygon = PoolVector2Array( 0, 0, 0, 260, 260, 260, 260, 0 )

[node name="Line2D2" type="Line2D" parent="."]
visible = false
position = Vector2( -117, 587 )
rotation = 1.52367
points = PoolVector2Array( 0, 0, 1000, 0 )
default_color = Color( 1, 0.0705882, 0.0705882, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Line2D2"]
"anims/New Anim" = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="Line2D" type="Line2D" parent="."]
visible = false
position = Vector2( -117, 587 )
rotation = 1.52367
points = PoolVector2Array( 0, 0, 1000, 0 )
default_color = Color( 1, 0.0705882, 0.0705882, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Line2D"]
"anims/New Anim" = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 332, 221 )
input_pickable = true
script = ExtResource( 2 )

[node name="Icon" type="Sprite" parent="KinematicBody2D"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 1 )

[node name="KinematicBody2D2" type="KinematicBody2D" parent="."]
position = Vector2( 1032, 128 )
input_pickable = true
script = ExtResource( 2 )

[node name="Icon" type="Sprite" parent="KinematicBody2D2"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D2"]
shape = SubResource( 1 )

[node name="KinematicBody2D3" type="KinematicBody2D" parent="."]
position = Vector2( 982, 531 )
input_pickable = true
script = ExtResource( 2 )

[node name="Icon" type="Sprite" parent="KinematicBody2D3"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D3"]
shape = SubResource( 1 )

[node name="KinematicBody2D4" type="KinematicBody2D" parent="."]
position = Vector2( 522, 570 )
input_pickable = true
script = ExtResource( 2 )

[node name="Icon" type="Sprite" parent="KinematicBody2D4"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D4"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="input_event" from="KinematicBody2D" to="KinematicBody2D" method="_on_KinematicBody2D_input_event"]
[connection signal="input_event" from="KinematicBody2D2" to="KinematicBody2D2" method="_on_KinematicBody2D_input_event"]
[connection signal="input_event" from="KinematicBody2D3" to="KinematicBody2D3" method="_on_KinematicBody2D_input_event"]
[connection signal="input_event" from="KinematicBody2D4" to="KinematicBody2D4" method="_on_KinematicBody2D_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
